# sscrap

./: CMakeLists.txt  README.MD
.github/workflows/: linux.yml
source/: ss_io.cpp
sscrap-utility/: main.cpp
